# bordeless_coding_classes

./: pyproject.toml
class1/1-intro-to-llms/: calling_llms.ipynb
class1/2-langgraph_agent/: langgraph_agent.ipynb
class2/agent_backend/: Dockerfile  README.md  class_quick_demos.ipynb
class2/agent_backend/src/: settings.py
class2/agent_backend/src/agent/: graph.py  nodes.py  prompt.py  state.py  tools.py
class2/agent_backend/src/api/: main.py
class2/agent_backend/src/api/routers/: agent.py
class2/agent_backend/src/common/: llm.py  types.py
class2/agent_frontend/: .gitignore  README.md  package-lock.json  package.json
class2/agent_frontend/public/: index.html
class2/agent_frontend/src/: App.css  App.js  App.tsx  index.css  types.ts
class2/agent_frontend/src/components/: ChatInterface.css  ChatInterface.tsx  ConfigPanel.css  ConfigPanel.tsx  FeedbackModal.css  FeedbackModal.tsx  MessageInput.css  MessageInput.tsx  MessageList.css  MessageList.tsx  index.ts
