[project]
name = "bordeless-coding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai",
    "langchain",
    "langchain-openai",
    "langchain-anthropic",
    "langgraph",
    "requests",
    "python-dotenv",
    "ipykernel",
    "fastapi",
    "uvicorn",
]

[tool.setuptools.packages.find]
include = ["class1*", "class2*"]
